611105-76868968 Sticky header extends into margin. Fixed display levels button, radio button for quartiles and selected contrasts/factors.

--- a/web/src/main/webapp/resources/css/table-grid.css
+++ b/web/src/main/webapp/resources/css/table-grid.css
@@ -194,13 +194,13 @@ tr.gxaProteomicsExperiment td.horizontal-header-cell-selected, tr.gxaProteomicsE
         position: absolute;
         top: 0;
         left: 0;
-        z-index: 50;
         width: auto; /* Prevent table from stretching to full size */
     }
+    #gxaExperimentPageHeatmapTableStickyWrapperStickyColumn,
     #gxaExperimentPageHeatmapTableStickyWrapperStickyHead {
-        z-index: 100;
+        z-index: -50;
     }
-    #gxaExperimentPageHeatmapTableStickyWrapperStickyIntersectsticky-intersect {
+    #gxaExperimentPageHeatmapTableStickyWrapperStickyIntersect {
         z-index: 150;
     }
 
